# Gaia

./: .gitignore  AGENTS.md  CLAUDE.md  Gaia_Presentation.pptx  LICENSE  README.md  README.zh-CN.md  codecov.yml  package-lock.json  package.json  pipeline.prod.toml  pipeline.test.toml  pipeline.toml  pyproject.toml  report.md  select_conclusions_prompt.md  trace.md  ~$Gaia_Presentation.pptx
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.claude/state/: current.yaml
.codex/skills/: formalization  gaia  gaia-cli  gaia-lang  render-obsidian
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
.playwright-mcp/: page-2026-04-13T02-39-45-130Z.yml  page-2026-04-13T02-48-36-702Z.yml
archive/cli/: lang_to_storage.py
archive/scripts/: ingest.py
cli/: dsl_to_storage.py  infer_store.py  lang_to_storage.py  lang_to_v2.py  llm_client.py  main.py  review_store.py
cli/commands/: compile.py  dsl.py  lang.py
cli/prompts/: review_system.md
docs/: README.md  architecture-rebaseline.md  docs-restructure-proposal.md  documentation-policy.md  module-map.md  openapi.json  openapi.yaml
docs/archive/: module-map.md
docs/design/: einstein_reasoning_chain.html  knowledge_package_system.md  phase1_billion_scale.md  phase2_architecture.md  question_as_discovery_context.md  related_work.md  scaling_belief_propagation.md  text_structuring_service.md  theoretical_foundations.md  verification_providers.md  version_dependency_environment.md
docs/examples/: einstein_elevator.md  galileo_tied_balls.md
docs/for-users/: cli-commands.md  hole-bridge-tutorial.md  language-reference.md  quick-start.md
docs/for-visitors/: what-is-gaia.md  worked-example.md
docs/foundations/: README.md  README.zh-CN.md  agent-credit.md  bp-on-graph-ir.md  domain-model.md  domain-model.zh-CN.md  foundation-reset-plan.md  graph-ir.md  inference-theory.md  product-scope.md  product-scope.zh-CN.md  server-architecture.md  system-overview.md  system-overview.zh-CN.md  theoretical-foundation.md
docs/foundations_archive/: README.zh-CN.md
docs/ideas/: anti-double-counting-minimal-design.md  case-analysis-strategy.md  elimination-strategy.md  gaia-discovery-insights.md  mathematical-induction.md  negation-relation.md  reductio-strategy.md  template-mechanism.md  type-system-direction.md
docs/plans/: 2026-03-02-api-gateway-design.md  2026-03-02-commit-engine-design.md  2026-03-02-gaia-implementation-plan.md  2026-03-02-inference-engine-design.md  2026-03-02-lkm-api-design-v2.md  2026-03-02-search-engine-design.md  2026-03-02-storage-layer-design.md  2026-03-03-lkm-api-design-v3.md  2026-03-03-plan1-operator-layer.md  2026-03-03-plan2-single-input-apis.md  2026-03-03-plan3-batch-processing.md  2026-03-04-plan-a-foundation.md  2026-03-04-plan-b-feature-enhancements.md  2026-03-04-plan-b-implementation.md  2026-03-04-plan-d-test-rewrite.md  2026-03-05-gaia-cli-design-v3.md  2026-03-05-gaia-cli-design.md  2026-03-05-plan-c-batch-and-storage-tests.md  2026-03-06-review-system-design.md  2026-03-08-gaia-cli-architecture.md  2026-03-08-gaia-dsl-runtime.md  2026-03-10-cross-package-integration.md  2026-03-10-relation-type-design.md  2026-03-10-relation-type-implementation.md  2026-03-10-storage-v2-chunk1.md  2026-03-10-storage-v2-chunk2.md  2026-03-10-storage-v2-chunk3.md  2026-03-11-publish-state-machine.md  2026-03-11-review-pipeline-design.md  2026-03-11-storage-v2-chunk5-design.md  2026-03-11-storage-v2-chunk5.md  2026-03-12-server-v2-commit-review-merge.md  2026-03-12-storage-v2-package-knowledge-versioning-design.md  2026-03-12-storage-v2-package-knowledge-versioning-design.zh-CN.md  2026-03-12-v2-e2e-paper-ingest.md  2026-03-12-version-management-storage-identity-consolidated-plan.zh-CN.md  2026-03-14-v2-database-visualization.md  2026-03-16-noisy-and-leak-inference-theory-rewrite.md  2026-03-17-gaia-lang-v2.md  2026-03-17-simplified-global-canonicalization.md  (+36 more)
docs/specs/: 2026-03-14-v2-database-visualization-design.md  2026-03-16-noisy-and-leak-unified-factor-design.md  2026-03-17-simplified-global-canonicalization-design.md  2026-03-19-curation-batch-pipeline-design.md  2026-03-19-typst-graph-ir-compiler-design.md  2026-03-20-typst-dsl-v4-design.md  2026-03-25-gaia-lang-alignment-design.md  2026-03-25-lkm-minimal-pipeline-spec.md  2026-03-25-theory-restructuring-design.md  2026-03-26-graph-ir-restructuring-design.md  2026-03-28-package-management-design.md  (+35 more)
frontend/: package-lock.json  package.json
libs/: embedding.py  models.py  pipeline.py
proto/: test_label_api.typ
scripts/: add_architecture_slide.py  backfill_embedding_metadata.py  build_lance_indexes.py  bulk-import-loop.sh  colorize_slides.py  dedupe-s3-lance.py  extract_subset.py  fix_slides.py  generate_curation_fixtures.py  generate_presentation.py  ingest.py  ingest_to_v2.py  migrate_lance_to_bytehouse.py  migrate_old_graph.py  paper_to_typst.py  paper_to_yaml.py  query_remote_lancedb.py  restructure_galileo.py  run_full_discovery.py  sample_remote_lancedb.py  seed_database.py  smoke_curation.py  smoke_report.json  try_discovery.py  update_galileo_slides.py  update_presentation.py  upload_fixtures.py  upload_v2_fixtures.py  xml_to_yaml.py
tests/: conftest.py  test_contraction.py  test_inference_v2.py  test_lowering.py  test_pipeline_converter.py  test_pipeline_e2e_typst.py  test_pipeline_infer.py  test_pipeline_publish.py  test_pipeline_review.py  test_pipeline_typst.py  test_science_examples.py
(+1268 files in other folders)
