[project]
name = "gaia-lang"
version = "0.2.5"
description = "Gaia Lang — Python DSL for knowledge authoring, compilation, and inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "SiliconEinstein"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pydantic>=2.0",
    "typer[all]>=0.12",
    "numpy>=1.26,<2.4",  # numpy 2.4 breaks pytest-cov (double-import C extension)
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/SiliconEinstein/Gaia"
Repository = "https://github.com/SiliconEinstein/Gaia"
Issues = "https://github.com/SiliconEinstein/Gaia/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.3",
]
# Heavy deps for LKM server (not needed for knowledge authoring)
server = [
    "pydantic-settings>=2.0",
    "lancedb>=0.6",
    "neo4j>=5.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pyarrow>=15.0",
    "litellm>=1.40",
    "httpx>=0.27",
    "lxml>=5.0",
    "kuzu>=0.4",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "typst>=0.12",
    "scikit-learn>=1.8.0",
    "tos>=2.7",
    "clickhouse-connect>=0.7",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gaia", "gaia.ir*", "gaia.lang*", "gaia.bp*", "gaia.cli*", "gaia.review*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "neo4j: tests requiring a running Neo4j instance",
    "integration_api: tests requiring real LLM/embedding API credentials",
]

[project.scripts]
gaia = "gaia.cli.main:app"

[tool.coverage.run]
omit = [
    "scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "# requires: api",
    "# requires: neo4j",
    "# requires: lancedb",
]

[tool.ruff]
line-length = 100
target-version = "py312"
